# muse

./: Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
amuse/: Cargo.toml  README.md
amuse/src/: main.rs
examples/: async.rs  fib-vm.rs  fib.muse  fib.rs  invoke.rs  rust-function.rs
guide/: book.toml
guide/src/: SUMMARY.md  design.md  reference.md  why.md
guide/src/reference/: assignment.md  bitwise.md  comparison.md  errors.md  expressions.md  functions.md  if.md  label.md  logic.md  lookup.md  loop.md  maps.md  math.md  modules.md  pattern-matching.md  term.md  tokens.md  tuples.md
guide/theme/: highlight.js
muse-channel/: Cargo.toml
muse-channel/src/: lib.rs  tests.rs
muse-lang/: Cargo.toml
muse-lang/src/: compiler.rs  lib.rs  runtime.rs  tests.rs  vm.rs
muse-lang/src/compiler/: syntax.rs
muse-lang/src/compiler/syntax/: token.rs
muse-lang/src/runtime/: list.rs  regex.rs  string.rs  symbol.rs  types.rs  value.rs
muse-lang/src/vm/: bitcode.rs  dispatched.rs
muse-reactor/: Cargo.toml
muse-reactor/src/: lib.rs  mock_tracing.rs  tests.rs
muse-ui/: Cargo.toml  README.md
muse-ui/src/: lib.rs
src/: compiler.rs  exception.rs  instructions.rs  lib.rs  list.rs  main.rs  map.rs  regex.rs  runtime.rs  string.rs  symbol.rs  syntax.rs  tests.rs  value.rs  vm.rs
src/compiler/: syntax.rs
src/compiler/syntax/: token.rs
src/runtime/: exception.rs  map.rs  reactor.rs  regex.rs  string.rs  symbol.rs  types.rs  value.rs
src/syntax/: token.rs
src/vm/: bitcode.rs  dispatched.rs  ops.rs
tests/: harness.rs  hosted.rs
tests/cases/: addition.rsn  assignment.muse  assignment.rsn  blocks.muse  blocks.rsn  comparisons.muse  comparisons.rsn  exceptions.rsn  fn.muse  fn.rsn  if.rsn  ints.rsn  list.rsn  logic.rsn  loops.rsn  map.rsn  match.rsn  mod.rsn  negate.rsn  nil.rsn  precedence.rsn  pub.rsn  regex.rsn  strings.rsn  symbols.rsn  truthy.rsn  types.muse
