[workspace]
members = ["amuse", "muse-ui"]

[workspace.dependencies]
muse = { path = "." }
muse-ui = { path = "muse-ui" }
cushy = { git = "https://github.com/khonsulabs/cushy" }

[package]
name = "muse"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/khonsulabs/muse"
license = "MIT OR Apache-2.0"

[features]
default = ["repl", "reactor"]
dispatched = []
reactor = ["dep:flume"]
repl = ["dep:rustyline", "dep:ariadne", "dep:dirs"]

[[bin]]
name = "muse"
path = "src/main.rs"
required-features = ["repl"]

[dependencies]
ahash = "0.8.7"
alot = "0.3.1"
ariadne = { version = "0.4.0", optional = true }
crossbeam-utils = "0.8.19"
flume = { version = "0.11.0", optional = true }
dirs = { version = "5.0.1", optional = true }
kempt = { version = "0.2.3", features = ["serde"] }
regex = "1.10.3"
rustyline = { version = "14.0.0", optional = true, default-features = false, features = [
    "with-file-history",
] }
serde = { version = "1.0.195", features = ["derive", "rc"] }
unicode-ident = "1.0.12"
refuse = "0.0.3"
refuse-pool = "0.0.3"
parking_lot = "0.12.1"

[dev-dependencies]
rsn = "0.1"
pollster = "0.3.0"
flume = "0.11.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"


[[test]]
name = "harness"
harness = false

[[test]]
name = "hosted"
harness = false

[profile.release]
debug = true
lto = true

# [patch.crates-io]
# refuse = { path = "../refuse" }
# refuse-pool = { path = "../refuse/refuse-pool" }
# refuse-macros = { path = "../refuse/refuse-macros" }
