[workspace]
members = ["amuse", "muse-lang", "muse-reactor", "muse-ui"]

[workspace.dependencies]
muse = { path = ".", default-features = false }
muse-lang = { path = "muse-lang", default-features = false }
kempt = { version = "0.2.3", features = ["serde"] }
muse-ui = { path = "muse-ui" }
cushy = { git = "https://github.com/khonsulabs/cushy" }
alot = "0.3.1"
crossbeam-utils = "0.8.19"
parking_lot = "0.12.1"
refuse = "0.0.4"
refuse-pool = "0.0.4"
serde = { version = "1.0.195", features = ["derive", "rc"] }

[package]
name = "muse"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/khonsulabs/muse"
license = "MIT OR Apache-2.0"

[features]
default = ["repl"]
dispatched = ["muse-lang/dispatched"]
repl = ["dep:rustyline", "dep:ariadne", "dep:dirs"]

[[bin]]
name = "muse"
path = "src/main.rs"
required-features = ["repl"]

[dependencies]
muse-lang = { workspace = true }
ariadne = { version = "0.4.0", optional = true }
dirs = { version = "5.0.1", optional = true }
rustyline = { version = "14.0.0", optional = true, default-features = false, features = [
    "with-file-history",
] }

[dev-dependencies]
rsn = "0.1"
pollster = "0.3.0"
flume = "0.11.0"
serde = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"


[[test]]
name = "harness"
harness = false

[[test]]
name = "hosted"
harness = false

[profile.release]
debug = true
lto = true

# [patch.crates-io]
# refuse = { path = "../refuse" }
# refuse-pool = { path = "../refuse/refuse-pool" }
# refuse-macros = { path = "../refuse/refuse-macros" }
